import org.apache.tools.ant.filters.ReplaceTokens
import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.api.tasks.testing.logging.TestLogEvent

plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'com.github.kt3k.coveralls' version '2.12.2'
    id 'com.marklogic.ml-gradle' version '5.0.0'
    id 'org.sonarqube' version '4.0.0.2929'
    id 'eclipse'
    id 'idea'
    id 'jacoco'
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

ext {
    // we don't need a REST server, only an XCC server
    mlAppDeployer.getCommands().remove(mlAppDeployer.getCommand('DeployRestApiServersCommand'))
    mlAppConfig {
        name = project.name
        customTokens.put('%%XDBC_PORT%%', '8223')
        createTriggersDatabase = false
    }
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

repositories {
    mavenCentral()
    flatDir {
        dirs 'src/test/resources/'
    }
}

sourceSets {
    test {
        // adding main resources from build dir, in order to load HTML with tokens replaced
        resources.srcDir sourceSets.main.output.resourcesDir
    }
    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/test/java')
        }
        resources.srcDir file('src/test/resources')
    }
    performanceTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/test/java')
        }
        resources.srcDir file('src/test/resources')
    }
}

configurations {
    shadow {
        extendsFrom api //will ensure that XCC is listed as a dependency
    }

    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly

    performanceTestImplementation.extendsFrom testImplementation
    performanceTestRuntimeOnly.extendsFrom testRuntimeOnly

    // encountered issues publishing since upgrading to Gradle 6:
    /* What went wrong:
    Execution failed for task ':publishMainJavaPublicationToMavenLocal'.
    > Failed to publish publication 'mainJava' to repository 'mavenLocal'
       > Artifact marklogic-corb-2.5.1.jar wasn't produced by this build.
     */
    // Suggested workaround: https://docs.gradle.org/current/userguide/upgrading_version_6.html#publishing_spring_boot_applications
    [apiElements, runtimeElements].each {
        it.outgoing.artifacts.removeIf { it.buildDependencies.getDependencies(null).contains(jar) }
    }
}

dependencies {
    compileOnly 'org.jetbrains:annotations:26.1.0'
    api "com.marklogic:marklogic-xcc:$xccVersion"
    // JavaScript libraries are  bundled in a fat jar for the UI
    shadow "org.webjars.npm:alpinejs:$alpineVersion"
    implementation "org.webjars.npm:alpinejs:$alpineVersion"
    // externalsortinginjava classes with the corb distro in a fat jar
    implementation "com.google.code.externalsortinginjava:externalsortinginjava:$externalsortinginjavaVersion"
    shadow "com.google.code.externalsortinginjava:externalsortinginjava:$externalsortinginjavaVersion"
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testImplementation "org.junit.vintage:junit-vintage-engine:$junitVersion"
    // Use the JUnit Jupiter engine for running tests
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
    testImplementation 'org.jasypt:jasypt:1.9.3'
    testImplementation 'org.mockito:mockito-core:4.11.0' //5.x requires Java 11
}

// perform token replacement in HTML for JavaScript library version paths
processResources {
    with copySpec {
        duplicatesStrategy = 'include'
        from ('src/main/resources/web') {
            include '*.html'
        }
        into ('web')
        filter(ReplaceTokens, tokens: [ALPINE_VERSION: alpineVersion])
    }
}
processTestResources.dependsOn processResources

//disabling, because we want to incorporate externalsortingjava and UI resources in uber jar and use as the artifact
jar {
    enabled = false
    dependsOn(shadowJar { archiveClassifier.set(null) })
}
shadowJar {
    //project.configurations.implementation.canBeResolved = true
    configurations = [project.configurations.shadow]
    dependencies {
        include(dependency("com.google.code.externalsortinginjava:externalsortinginjava:$externalsortinginjavaVersion"))
        include(dependency("org.webjars.npm:alpinejs:$alpineVersion"))
    }
    //generate same name as the jar task would
    archiveFileName.set("${archiveBaseName.get()}-${archiveVersion.get()}.${archiveExtension.get()}")
    manifest {
        attributes 'Application-Version': project.version
        attributes 'Build-date' : new Date()
        attributes 'Main-Class' : 'com.marklogic.developer.corb.JobServer'
        attributes 'Class-Path': "markLogic-xcc-${xccVersion}.jar"
        attributes 'Name': 'com/marklogic/developer/corb/'
        attributes 'Specification-Title' : 'corb'
        attributes 'Specification-Version' : project.version
        attributes 'Implementation-Title' : project.name
        //Manager class reads the version for usage messages
        attributes 'Implementation-Version' : project.version
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "corb2"
        property "sonar.organization", "marklogic-community"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

tasks.register('sourcesJar', Jar) {
    dependsOn classes
    description = "Create a JAR of source files; required for publishing"
    archiveClassifier.set('sources')
    from sourceSets.main.allJava
}

tasks.register('javadocJar', Jar) {
    dependsOn javadoc
    archiveClassifier.set('javadoc')
    from 'build/docs/javadoc'
}

jacocoTestReport {
    mustRunAfter 'test', 'integrationTest'
    reports {
        xml.required.set(true) // coveralls plugin depends on xml format report
        html.required.set(true)
    }
}

tasks.named('test', Test) {
    useJUnitPlatform()
    //we will run Integration and Performance tests in separate tasks
    exclude '**/*IT.class'
    exclude '**/*PT.class'
    testLogging {
        events "failed", "skipped" //"passed"
        showStandardStreams = false
    }
}

tasks.register('integrationTest', Test) {
    dependsOn test
    useJUnitPlatform()
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    filter {
        //include all integration tests
        includeTestsMatching "*IT"
    }
    //If you want to ensure that integration tests are run every time when you invoke
    //this task, uncomment the following line.
    //outputs.upToDateWhen { false }
    jacoco {
        destinationFile = file("$buildDir/jacoco/test.exec")
    }
    //generate the Jacoco report
    finalizedBy { tasks.integrationTestReport }
}

tasks.register('integrationTestReport', JacocoReport) {
    sourceSets sourceSets.main
    executionData integrationTest
}

tasks.register('performanceTest', Test) {
    useJUnitPlatform()
    testClassesDirs = sourceSets.performanceTest.output.classesDirs
    classpath = sourceSets.performanceTest.runtimeClasspath
    filter {
        //include all performance tests
        includeTestsMatching "*PT"
    }

    //If you want to ensure that performance tests are run every time when you invoke
    //this task, uncomment the following line.
    outputs.upToDateWhen { false }
}

check.dependsOn jacocoTestReport
//Ensure that the check task fails the build if there are failing integration tests.
check.dependsOn integrationTest
//Ensure that our unit tests are run before our integration tests
integrationTest.mustRunAfter test
integrationTest.enabled = !project.hasProperty('skipIntegrationTest')
//Ensure that the check task fails the build if there are failing performance tests.
//check.dependsOn performanceTest
//Ensure that our unit tests are run before our performance tests
performanceTest.mustRunAfter integrationTest
performanceTest.onlyIf { !project.hasProperty('skipPerformanceTest') }

tasks.withType(Test).configureEach {
    reports.html.destination = file("${reporting.baseDir}/${name}")
    testLogging {
        // set options for log level LIFECYCLE
        events TestLogEvent.FAILED,
            TestLogEvent.SKIPPED,
            TestLogEvent.STANDARD_OUT
        showExceptions true
        exceptionFormat TestExceptionFormat.SHORT
        showCauses true
        showStackTraces true

        // set options for log level DEBUG and INFO
        debug {
            events TestLogEvent.FAILED,
                TestLogEvent.SKIPPED,
                TestLogEvent.STANDARD_OUT,
                TestLogEvent.STANDARD_ERROR
            exceptionFormat TestExceptionFormat.FULL
        }
        info.events = debug.events
        info.exceptionFormat = debug.exceptionFormat

        afterSuite { desc, result ->
            if (!desc.parent) { // will match the outermost suite
                def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
                def startItem = '|  ', endItem = '  |'
                def repeatLength = startItem.length() + output.length() + endItem.length()
                println('\n' + ('-' * repeatLength) + '\n' + startItem + output + endItem + '\n' + ('-' * repeatLength))
            }
        }
    }
}

tasks.coveralls {
    dependsOn 'check'
}

// Having both runtimeElements and shadowRuntimeElements variants makes it harder to resolve CoRB as a dependency and is confusing.
// We just want the fat jar listed and seen as the only option.
components.java.withVariantsFromConfiguration(configurations.getByName("runtimeElements")) {
    skip()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifact sourcesJar
            artifact javadocJar
            pom.withXml {
                asNode().children().last() + {
                    resolveStrategy = Closure.DELEGATE_FIRST
                    name "corb"
                    url project.websiteUrl
                    scm {
                        url project.vcsUrl
                    }
                    issueManagement {
                        system "GitHub Issues"
                        url project.issueTrackerUrl
                    }
                    licenses {
                        license {
                            name "The Apache Software License, Version 2.0"
                            url "http://www.apache.org/licenses/LICENSE-2.0.txt"
                            distribution "repo"
                        }
                    }
                    description 'CoRB is a Java tool designed for bulk content-reprocessing of documents stored in MarkLogic.'
                    developers {
                        developer {
                            name "Bhagat Bandlamudi"
                            email "bhagat.bandlamudi@marklogic.com"
                            organization "MarkLogic"
                        }
                        developer {
                            name "Mads Hansen"
                            email "mads.hansen@marklogic.com"
                            organization "MarkLogic"
                        }
                    }
                }
            }
        }
    }
    repositories {
        maven {
            url ossURL
            credentials {
                username ossUsername
                password ossPassword
            }
        }
    }
}

signing {
    sign publishing.publications.mavenJava
}
